--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ReservaAutomoviles_DRIVEPLUS_
 excludes=
+file.reference.iText7-Core-7.1.3.zip=C:\\Users\\Acer\\Downloads\\iText7-Core-7.1.3.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.iText7-Core-7.1.3.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
