--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ReservaAutomoviles_DRIVEPLUS_
 excludes=
 file.reference.iText7-Core-7.1.3.zip=C:\\Users\\Acer\\Downloads\\iText7-Core-7.1.3.zip
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Acer\\Downloads\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.iText7-Core-7.1.3.zip}
+    ${file.reference.iText7-Core-7.1.3.zip}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
