--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ReservaAutomoviles_DRIVEPLUS_
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\LOQ\\Documentos\\Sandra\\TERCER CICLO\\Cursos\\POO II\\Tercera Unidad\\ReservaAutomoviles_DRIVEPLUS_MIO\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
